Version 0.9.5.2 - unknown
- MAJOR: all SMS date/time will be adjusted to GMT+0 in database (anton)
- add method to modify parameters in interceptincomingsms() and interceptsmstoinbox() (anton)
- add timezone settings (anton)
- add new tools pvat, replace keyword @<username> with PV <username> (anton)
- fix #3095609 XSS issue (security hole) (anton)
- fix #3095660 should be switch() (anton)
- fix #3097366 str_replace issue (anton)

Version 0.9.5.1 - 201010
- MAJOR: gateway uplink will work only with master installed with playSMS >= 0.9.5.1 (anton)
- MAJOR: fix message empty when handled by gnokii or smstools due to single quote in $lc (kendokar)
- MAJOR: PHP PEAR DB re-included in the package, too complicated to install it manually (anton)
- add new gateway module gammu, tested using backend FILES with Gammu version 1.28.0 (anton)
- add interceptincomingsms() lib/fn_core.php, in setsmsincomingaction(), hookable for tools (anton)
- add interceptsmstoinbox() lib/fn_core.php, in insertsmstoinbox(), hookable for tools (anton)
- add css class .error_string and .required, themes common.css (anton)
- add index.php?app=call to run hookable function 'call', this will replace all direct access (anton)
- change websend2pv() to sendsms_pv() and websend2group() to sendsms_bc(), lib/fn_sendsms.php (anton)
- change length of main table in themes default and work2 to 960 instead of 100% (anton)
- remove input.php and output.php and replace them with webservices, docs/WEBSERVICES (anton)
- remove send2group() and replace it with sendsms_bc(), lib/fn_sendsms.php (anton)
- fix autoreply, sendsms_pv() returns array (anton)
- fix simplerate_hook_cansend should print $username to logger_print instead $uid (anton)
- fix phonebook should be able to match numbers with entries from shared groups (anton)
- fix phonebook number matching got better (anton)
- fix short_open_tag issue, now all short tags including <?= replaced with <?php (anton)